--- a/lib/generators/provider/family/templates/adapter.rb.tt
+++ b/lib/generators/provider/family/templates/adapter.rb.tt
@@ -44,13 +44,22 @@ class Provider::<%= class_name %>Adapter < Provider::Base
     return nil unless family.present?
 
     # Get family-specific credentials
-    <%= file_name %>_item = family.<%= file_name %>_items.where.not(<%= parsed_fields.select { |f| f[:secret] }.first&.dig(:name) || 'api_key' %>: nil).first
+<% first_secret_field = parsed_fields.find { |f| f[:secret] }&.dig(:name) -%>
+<% if first_secret_field -%>
+    <%= file_name %>_item = family.<%= file_name %>_items.where.not(<%= first_secret_field %>: nil).first
+<% else -%>
+    <%= file_name %>_item = family.<%= file_name %>_items.first
+<% end -%>
     return nil unless <%= file_name %>_item&.credentials_configured?
 
     # TODO: Implement provider initialization
+<% if first_secret_field -%>
     # Provider::<%= class_name %>.new(
-    #   <%= file_name %>_item.<%= parsed_fields.select { |f| f[:secret] }.first&.dig(:name) || 'api_key' %><%= parsed_fields.select { |f| f[:default] }.any? ? ",\n    #   " + parsed_fields.select { |f| f[:default] }.map { |f| "#{f[:name]}: #{file_name}_item.effective_#{f[:name]}" }.join(",\n    #   ") : "" %>
+    #   <%= file_name %>_item.<%= first_secret_field %><%= parsed_fields.select { |f| f[:default] }.any? ? ",\n    #   " + parsed_fields.select { |f| f[:default] }.map { |f| "#{f[:name]}: #{file_name}_item.effective_#{f[:name]}" }.join(",\n    #   ") : "" %>
     # )
+<% else -%>
+    # Provider::<%= class_name %>.new(<%= file_name %>_item)
+<% end -%>
     raise NotImplementedError, "Implement Provider::<%= class_name %>.new in #{__FILE__}"
   end
 
