--- a/app/views/budgets/_budget_categories.html.erb
+++ b/app/views/budgets/_budget_categories.html.erb
@@ -18,13 +18,13 @@
       <% category_groups = BudgetCategory::Group.for(budget.budget_categories) %>
 
       <% category_groups.each_with_index do |group, index| %>
-        <div>
+        <div class="py-2">
           <%= render "budget_categories/budget_category", budget_category: group.budget_category %>
 
           <div>
             <% group.budget_subcategories.each do |budget_subcategory| %>
-              <div class="w-full flex items-center -mt-4">
-                <div class="ml-8 flex items-center justify-center text-subdued">
+              <div class="w-full flex items-start">
+                <div class="ml-8 pt-4 flex items-center justify-center text-subdued">
                   <%= icon "corner-down-right" %>
                 </div>
 
@@ -36,8 +36,9 @@
 
         <%= render "shared/ruler" %>
       <% end %>
-
-      <%= render "budget_categories/budget_category", budget_category: budget.uncategorized_budget_category %>
+      <div class="py-2">
+        <%= render "budget_categories/budget_category", budget_category: budget.uncategorized_budget_category %>
+      </div>
     <% end %>
   </div>
 </div>
