--- a/app/views/oidc_accounts/link.html.erb
+++ b/app/views/oidc_accounts/link.html.erb
@@ -53,14 +53,20 @@
       <% end %>
     </div>
 
-    <%= render DS::Button.new(
-      text: "Create Account",
-      href: create_user_oidc_account_path,
-      full_width: true,
-      variant: :primary,
-      method: :post,
-      data: { turbo: false }
-    ) %>
+    <% if @allow_account_creation %>
+      <%= render DS::Button.new(
+        text: "Create Account",
+        href: create_user_oidc_account_path,
+        full_width: true,
+        variant: :primary,
+        method: :post,
+        data: { turbo: false }
+      ) %>
+    <% else %>
+      <p class="text-xs text-secondary">
+        New account creation via single sign-on is disabled. Please contact an administrator to create your account.
+      </p>
+    <% end %>
   </div>
 <% end %>
 
