Rule with no action translation

--- a/app/views/rules/_rule.html.erb
+++ b/app/views/rules/_rule.html.erb
@@ -31,7 +31,7 @@
       <p class="flex items-center flex-wrap gap-1.5 m-0">
         <span class="px-2 py-1 border border-secondary rounded-full">
           <% if rule.actions.first.nil? %>
-            No action
+            <%= t("rules.no_action") %>
           <% else %>
             <% if rule.actions.first.value && rule.actions.first.options %>
               <%= rule.actions.first.executor.label %> to <%= rule.actions.first.value_display %>
