feat: Add toggle on mobile to show/hide checkboxes in transaction page

--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -46,7 +46,7 @@
   <%= render "summary", totals: @search.totals %>
 
   <div id="transactions"
-       data-controller="bulk-select"
+       data-controller="bulk-select checkbox-toggle"
        data-bulk-select-singular-label-value="<%= t(".transaction") %>"
        data-bulk-select-plural-label-value="<%= t(".transactions") %>"
        class="flex flex-col bg-container rounded-xl shadow-border-xs p-4">
