feat: Move merchant name before account name

--- a/app/views/transactions/_transaction.html.erb
+++ b/app/views/transactions/_transaction.html.erb
@@ -83,15 +83,15 @@
                       <%= transaction.loan_payment? ? "Loan Payment" : "Transfer" %> • <%= entry.account.name %>
                     </span>
                   <% else %>
+                    <% if transaction.merchant&.present? %>
+                      <span class="lg:inline truncate"><%= transaction.merchant.name %> • </span>
+                    <% end %>
                     <span class="text-secondary hidden lg:inline">
                       <%= link_to entry.account.name,
                           account_path(entry.account, tab: "transactions"),
                           data: { turbo_frame: "_top" },
                           class: "hover:underline" %>
                     </span>
-                    <% if transaction.merchant&.present? %>
-                      <span class="lg:inline truncate">• <%= transaction.merchant.name %></span>
-                    <% end %>
                     <div class="flex items-center gap-1 truncate">
                       <%= render "categories/category_name_mobile", transaction: transaction %>
                       <% if transaction.merchant&.present? %>
